# gaia_ultimatum

./: .gitignore  LICENSE  Makefile  README.md  main.py  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml  deploy-web.yml
gaia_ultimatum/: __init__.py  __main__.py  app.py  assets.py  audio.py  config.py  config1.py  controller.py  controller2.py  game.py  game1.py  graphics.py  graphics1.py  high_scores.json  logging_setup.py  main.py  main2.py  main3.py  model.py  test.py  ui.py  ui1.py  utils.py  view.py
gaia_ultimatum/controller/: __init__.py  input_handler.py
gaia_ultimatum/data/: skills.json
gaia_ultimatum/models/: __init__.py  catastrophe.py  country.py  gaia.py  game.py  humans.py  world.py
gaia_ultimatum/tests/: test_audio_manager.py
gaia_ultimatum/view/: __init__.py  fonts.py  renderer.py
tests/: conftest.py  test_audio.py  test_cli.py  test_config.py  test_models.py
