[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gaia-ultimatum"
version = "1.0.0"
description = "A strategy game where humanity races to restore balance with Earth."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Gaia Ultimatum Contributors" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment :: Simulation",
]
dependencies = [
    "pygame>=2.5,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "mypy>=1.8",
]

[project.scripts]
gaia-ultimatum = "gaia_ultimatum.app:run"

[project.urls]
Homepage = "https://github.com/KalilouSySav/gaia_ultimatum"
Repository = "https://github.com/KalilouSySav/gaia_ultimatum"
Issues = "https://github.com/KalilouSySav/gaia_ultimatum/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["gaia_ultimatum*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
gaia_ultimatum = [
    "data/*.json",
    "data/*.geojson",
    "data/images/*",
    "data/fonts/*",
    "sounds/*",
    "cinematics/*",
]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
filterwarnings = ["ignore::DeprecationWarning:pygame.*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict_optional = true
warn_unused_ignores = true
ignore_missing_imports = true
